crates/veloq-runtime/tests/ui/task_lifetime_fail.stderr
error[E0716]: temporary value dropped while borrowed
  --> tests/ui/task_lifetime_fail.rs:7:13
   |
 6 |           scope!(ctx, async |s| {
   |                              - lifetime `'1` appears in the type of `s`
 7 | /             task_local!(t, async {
 8 | |                 veloq_runtime::task::yield_now().await;
 9 | |                 veloq_runtime::task::yield_now().await;
10 | |                 veloq_runtime::task::yield_now().await;
11 | |                 veloq_runtime::task::yield_now().await;
12 | |                 42
13 | |             });
   | |______________^ creates a temporary value which is freed while still in use
14 |               let _ = s.spawn_local(&t);
   |                       ----------------- argument requires that borrow lasts for `'1`
15 |           })
   |           - temporary value is freed at the end of this statement
   |
note: requirement that the value outlives `'1` introduced here
  --> src/scope.rs
   |
   |         TTask: LocalTask<T> + Sized + 'env,
   |                                       ^^^^
   = note: this error originates in the macro `task_local` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0716]: temporary value dropped while borrowed
  --> tests/ui/task_lifetime_fail.rs:7:13
   |
 6 |           scope!(ctx, async |s| {
   |                              - lifetime `'1` appears in the type of `s`
 7 | /             task_local!(t, async {
 8 | |                 veloq_runtime::task::yield_now().await;
 9 | |                 veloq_runtime::task::yield_now().await;
10 | |                 veloq_runtime::task::yield_now().await;
11 | |                 veloq_runtime::task::yield_now().await;
12 | |                 42
13 | |             });
   | |______________^ creates a temporary value which is freed while still in use
14 |               let _ = s.spawn_local(&t);
   |                       ----------------- argument requires that borrow lasts for `'1`
15 |           })
   |           - temporary value is freed at the end of this statement
   |
   = note: this error originates in the macro `task_local` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0716]: temporary value dropped while borrowed
  --> tests/ui/task_lifetime_fail.rs:19:13
   |
18 |           scope!(ctx, async |s| {
   |                              - lifetime `'1` appears in the type of `s`
19 | /             task!(t, async {
20 | |                 veloq_runtime::task::yield_now().await;
21 | |                 veloq_runtime::task::yield_now().await;
22 | |                 veloq_runtime::task::yield_now().await;
23 | |                 veloq_runtime::task::yield_now().await;
24 | |                 42
25 | |             });
   | |______________^ creates a temporary value which is freed while still in use
26 |               let _ = s.spawn(&t);
   |                       ----------- argument requires that borrow lasts for `'1`
27 |           })
   |           - temporary value is freed at the end of this statement
   |
note: requirement that the value outlives `'1` introduced here
  --> src/scope.rs
   |
   |         S_: SendTask<T> + Sized + 'env,
   |                                   ^^^^
   = note: this error originates in the macro `task` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0716]: temporary value dropped while borrowed
  --> tests/ui/task_lifetime_fail.rs:19:13
   |
18 |           scope!(ctx, async |s| {
   |                              - lifetime `'1` appears in the type of `s`
19 | /             task!(t, async {
20 | |                 veloq_runtime::task::yield_now().await;
21 | |                 veloq_runtime::task::yield_now().await;
22 | |                 veloq_runtime::task::yield_now().await;
23 | |                 veloq_runtime::task::yield_now().await;
24 | |                 42
25 | |             });
   | |______________^ creates a temporary value which is freed while still in use
26 |               let _ = s.spawn(&t);
   |                       ----------- argument requires that borrow lasts for `'1`
27 |           })
   |           - temporary value is freed at the end of this statement
   |
   = note: this error originates in the macro `task` (in Nightly builds, run with -Z macro-backtrace for more info)
